' Generated by UML Generator
' Encoded: pLXBSzis4BxhL-18rbAcPushHedRYLixpKZgzD3f0IBN51AGu02WNJNrVoy0ll0I9ISvz6ARME1RxBSFxFgra9ZBfgGpyObKDUQuH1d5Ggobv6JVIBZDMBKb_m3wVdOWEQ2Cy8p2R6PseMs9nM436UFv1cecY6JyY3xF45fypFVP3igQOWbBz8lrfQKBzUCgUZevVJ3L9qjSRzZJZhNd4YwMQ0EYeN8BSeuuUthVb4j4AfakxUjfVG-aojySVnV0R_EaCR_wdMlEyV6E27bjdLdfGm8_GiBDjmEOcgCZh88a-Gd51SWxm3dmFSCyly4I9uvEI_XJ9VbnDNlk6TQt_G9gtMENSgfFJJEgTxXKLhW4GwR-GrckugOgWfqEExq8_bR6YscOFMCKS3LuGczf4Je734nP96u1y-nWoBhwh49SakmPULUcIlUa3-OeSXr7uptm0hQCopKj62VoK7egXPATLtGc59H_1i1IQqmeF9oxEYV5uQkqFZif_fQfLKOfy3O2XLxS0dya6NJHtdrfAMxaA5oF7sxYZvZ9QRWvEWMMzY7H5G81GX1MwPHklJLNiPCVb-WUrzVToc_xZv19RReAy9fL0fIrH1wlmpshBcy_S5Rm5ZfK4GBzQ36dB-iJTvOQzr0oQJs7GZbFxGeCRNzTRYXb1Qc-2Gnhv2KydG1GUVc5XsDbm2UVsXMYu_GkM1jS4KLABWD9mxAVX8QOt8jOqmUVgUAu-XGhZ2_XfCqtJBDrNLEIgLh2AgzKbLW50EQ5w5Ny-PTIyiY8US1KXWd5mGCf6guuK98_O7__c8rhdh8sALlQkyAl_xGUNLD6Qe3ylbOwSzRigQ6-VMeXNyl-9h5-8Kdz1GjwZdpWtXrRlVvhUT0M32gruDQuftlGXVaUtwkUXSuZ_jveGs6TsNQNSPKAIn1Srpc_6HZH20Cd6i4IXRprACepU2yanvb4OrCHzOqTOtgjLhkV5EmxnREzdXEXkeVZUszxna6r537NcSuY7VxoTSrHJDCSHVIabYTsnnfSJZ9StG05sRqA8b7zxU2stZTMJ_52rvlEmNV2LFjYdVzWMHXWEC8O5oxMpSXB06NBOlmvG6zxZmKmeoJmgXLORJnje6WevaDONLaBhTVjXV-7ysCFXkbzsiI8PSCUn511x98bcSJKr28GGpfnLRU73_yzCOeYHCGqp560dxOrkLG36-nOmkH1DyK-_XZLto1wtrWt2mgP8upPu6BjB7lSt7CaeTbkMTGFetFQh0oy1r5gzvMjaxatUoxZ0wtx07K8oOM7XpxLICyyKx79yPrg4bWNBMS7LgVvT6njd8bmwGsMfZVD957NRFilTIUTZLPRWMuh2GNm5Ve1LV0qY5ScmyVkjUTdMg7Rm9uk2TFbm8xbjeSzZvI6BrPdiqVn2Dtbpy-SbTk9MQ2VQoVQu2v-5mT5Nb_payaRFW8d3yUJUrKGAJh1VokcgjnNfK28yw9425lYwT7tN1VSpUFn_qEzUhLoyidxNueM6vVv8-vtYuKxqyOssCERD-dvulX8edT5fW_xBLqi_ksk63nI-lB-uiofS8CLWI-TRJv9Tk7G45wTiCK3WP7WEgtzDLHvKzB_00
' URL: http://www.plantuml.com/plantuml/uml/pLXBSzis4BxhL-18rbAcPushHedRYLixpKZgzD3f0IBN51AGu02WNJNrVoy0ll0I9ISvz6ARME1RxBSFxFgra9ZBfgGpyObKDUQuH1d5Ggobv6JVIBZDMBKb_m3wVdOWEQ2Cy8p2R6PseMs9nM436UFv1cecY6JyY3xF45fypFVP3igQOWbBz8lrfQKBzUCgUZevVJ3L9qjSRzZJZhNd4YwMQ0EYeN8BSeuuUthVb4j4AfakxUjfVG-aojySVnV0R_EaCR_wdMlEyV6E27bjdLdfGm8_GiBDjmEOcgCZh88a-Gd51SWxm3dmFSCyly4I9uvEI_XJ9VbnDNlk6TQt_G9gtMENSgfFJJEgTxXKLhW4GwR-GrckugOgWfqEExq8_bR6YscOFMCKS3LuGczf4Je734nP96u1y-nWoBhwh49SakmPULUcIlUa3-OeSXr7uptm0hQCopKj62VoK7egXPATLtGc59H_1i1IQqmeF9oxEYV5uQkqFZif_fQfLKOfy3O2XLxS0dya6NJHtdrfAMxaA5oF7sxYZvZ9QRWvEWMMzY7H5G81GX1MwPHklJLNiPCVb-WUrzVToc_xZv19RReAy9fL0fIrH1wlmpshBcy_S5Rm5ZfK4GBzQ36dB-iJTvOQzr0oQJs7GZbFxGeCRNzTRYXb1Qc-2Gnhv2KydG1GUVc5XsDbm2UVsXMYu_GkM1jS4KLABWD9mxAVX8QOt8jOqmUVgUAu-XGhZ2_XfCqtJBDrNLEIgLh2AgzKbLW50EQ5w5Ny-PTIyiY8US1KXWd5mGCf6guuK98_O7__c8rhdh8sALlQkyAl_xGUNLD6Qe3ylbOwSzRigQ6-VMeXNyl-9h5-8Kdz1GjwZdpWtXrRlVvhUT0M32gruDQuftlGXVaUtwkUXSuZ_jveGs6TsNQNSPKAIn1Srpc_6HZH20Cd6i4IXRprACepU2yanvb4OrCHzOqTOtgjLhkV5EmxnREzdXEXkeVZUszxna6r537NcSuY7VxoTSrHJDCSHVIabYTsnnfSJZ9StG05sRqA8b7zxU2stZTMJ_52rvlEmNV2LFjYdVzWMHXWEC8O5oxMpSXB06NBOlmvG6zxZmKmeoJmgXLORJnje6WevaDONLaBhTVjXV-7ysCFXkbzsiI8PSCUn511x98bcSJKr28GGpfnLRU73_yzCOeYHCGqp560dxOrkLG36-nOmkH1DyK-_XZLto1wtrWt2mgP8upPu6BjB7lSt7CaeTbkMTGFetFQh0oy1r5gzvMjaxatUoxZ0wtx07K8oOM7XpxLICyyKx79yPrg4bWNBMS7LgVvT6njd8bmwGsMfZVD957NRFilTIUTZLPRWMuh2GNm5Ve1LV0qY5ScmyVkjUTdMg7Rm9uk2TFbm8xbjeSzZvI6BrPdiqVn2Dtbpy-SbTk9MQ2VQoVQu2v-5mT5Nb_payaRFW8d3yUJUrKGAJh1VokcgjnNfK28yw9425lYwT7tN1VSpUFn_qEzUhLoyidxNueM6vVv8-vtYuKxqyOssCERD-dvulX8edT5fW_xBLqi_ksk63nI-lB-uiofS8CLWI-TRJv9Tk7G45wTiCK3WP7WEgtzDLHvKzB_00
' Generated on: 2026-04-01T03:43:34.832369

@startuml
skinparam classAttributeIconSize 0
hide circle

class SmashRecordRepository {
  -jdbcTemplate: JdbcTemplate
  --
  +SmashRecordRepository(jdbcTemplate: JdbcTemplate)
  -mapRowToRecord(rs: ResultSet, rowNum: int): SmashRecord
  +findByUserId(userId: int): ArrayList<SmashRecord>
  +save(record: SmashRecord): int
  +findById(id: int): SmashRecord
  +getLeaderboardData(): ArrayList<LeaderboardEntry>
}

class UserRepository {
  -jdbcTemplate: JdbcTemplate
  --
  +UserRepository(jdbcTemplate: JdbcTemplate)
  -mapRowToUser(rs: ResultSet, rowNum: int): User
  +findByUsername(username: String): User
  +findById(id: int): User
  +existsByUsername(username: String): boolean
  +save(user: User): int
}

class LeaderboardSearch {
  +{static} findByUsername(list: ArrayList<LeaderboardEntry>, username: String): int
}

class MergeSortAlgorithm {
  +{static} sort(list: ArrayList<LeaderboardEntry>): ArrayList<LeaderboardEntry>
  -{static} merge(left: ArrayList<LeaderboardEntry>, right: ArrayList<LeaderboardEntry>): ArrayList<LeaderboardEntry>
}

class SmashController {
  -smashService: SmashService
  -authService: AuthService
  --
  +SmashController(smashService: SmashService, authService: AuthService)
  +saveRecord(sessionId: String, body: Map<String,Object>): ResponseEntity<Map<String,Object>>
  +getProgression(sessionId: String): ResponseEntity<?>
}

class AuthController {
  -authService: AuthService
  --
  +AuthController(authService: AuthService)
  +register(body: Map<String,String>): ResponseEntity<Map<String,Object>>
  +login(body: Map<String,String>): ResponseEntity<Map<String,Object>>
  +logout(sessionId: String): ResponseEntity<Map<String,Object>>
  +me(sessionId: String): ResponseEntity<Map<String,Object>>
}

class LeaderboardController {
  -leaderboardService: LeaderboardService
  --
  +LeaderboardController(leaderboardService: LeaderboardService)
  +getLeaderboard(): ResponseEntity<List<Map<String,Object>>>
  +getUserRank(username: String): ResponseEntity<Map<String,Object>>
}

class SmashCalcApplication {
  +{static} main(args: String[]): void
  +corsConfigurer(): WebMvcConfigurer
}

class SmashRecord {
  -id: int
  -userId: int
  -speedMps: double
  -recordedAt: String
  --
  +SmashRecord()
  +SmashRecord(userId: int, speedMps: double)
  +getSpeedKmh(): double
  +getId(): int
  +setId(id: int): void
  +getUserId(): int
  +setUserId(userId: int): void
  +getSpeedMps(): double
  +setSpeedMps(speedMps: double): void
  +getRecordedAt(): String
  +setRecordedAt(recordedAt: String): void
}

abstract class User {
  -id: int
  -username: String
  -passwordHash: String
  -displayName: String
  -createdAt: String
  --
  +User()
  +User(username: String, passwordHash: String, displayName: String)
  +getUserType(): String
  +canDeleteRecords(targetUserId: int): boolean
  +getId(): int
  +setId(id: int): void
  +getUsername(): String
  +setUsername(username: String): void
  +getPasswordHash(): String
  +setPasswordHash(passwordHash: String): void
  +getDisplayName(): String
  +setDisplayName(displayName: String): void
  +getCreatedAt(): String
  +setCreatedAt(createdAt: String): void
}

class RegularUser {
  +RegularUser()
  +RegularUser(username: String, passwordHash: String, displayName: String)
  +getUserType(): String
  +canDeleteRecords(targetUserId: int): boolean
}

class LeaderboardEntry {
  -username: String
  -bestSpeedKmh: double
  -totalSmashes: int
  -rank: int
  --
  +LeaderboardEntry(username: String, bestSpeedKmh: double, totalSmashes: int)
  +compareTo(other: LeaderboardEntry): int
  +getUsername(): String
  +setUsername(username: String): void
  +getBestSpeedKmh(): double
  +setBestSpeedKmh(bestSpeedKmh: double): void
  +getTotalSmashes(): int
  +setTotalSmashes(totalSmashes: int): void
  +getRank(): int
  +setRank(rank: int): void
}

class SmashService {
  -recordRepository: SmashRecordRepository
  --
  +SmashService(recordRepository: SmashRecordRepository)
  +saveSmash(userId: int, speedMps: double): SmashRecord
  +getHistory(userId: int): ArrayList<SmashRecord>
}

class AuthService {
  -userRepository: UserRepository
  -activeSessions: HashMap<String, Integer> = new HashMap<>()
  --
  +AuthService(userRepository: UserRepository)
  +register(username: String, password: String, displayName: String): String
  +login(username: String, password: String): String
  -createSession(userId: int): String
  +getUserFromSession(sessionId: String): User
  +logout(sessionId: String): void
  -hashPassword(password: String): String
  -verifyPassword(password: String, storedHash: String): boolean
}

class LeaderboardService {
  -recordRepository: SmashRecordRepository
  --
  +LeaderboardService(recordRepository: SmashRecordRepository)
  +getLeaderboard(): ArrayList<LeaderboardEntry>
  +getUserRank(username: String): int
}

SmashRecordRepository ..> SmashRecord
UserRepository ..> User
SmashController *-- SmashService
SmashController *-- AuthService
AuthController *-- AuthService
LeaderboardController *-- LeaderboardService
RegularUser --|> User
LeaderboardEntry ..> LeaderboardEntry
SmashService *-- SmashRecordRepository
SmashService ..> SmashRecord
AuthService *-- UserRepository
AuthService ..> User
LeaderboardService *-- SmashRecordRepository
@enduml